--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@ body {
 			<a href="bin/fpp.html"><button>First Person Maze (raycasting test)</button></a>
 			<a href="bin/mazebeta.html"><button>First Person Maze (beta)</button></a>
 			<a href="bin/wordle.html"><button>Wordle</button></a>
+			<a href="bin/bs.html"><button>Beat Saber</button></a>
 			<a href=""><button>(UPCOMING) Doom</button></a>
 			<a href=""><button>(UPCOMING) The Oregon Trail</button></a>
 			<br><br><i style=opacity:0.5;>More Coming Soon!</i>
