--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 		}
 		button {
 			padding: 20px;
-			border-radius: 5px;
 			background: rgba(0, 0, 0, 0.2);
 			background-effect: blur(20px);
 			border: none;
@@ -74,12 +73,8 @@
 			margin: 10px;
 		}
 		button:hover {
-			background: rgba(0, 0, 0, 0.4);
-			margin: 5px;
-			padding: 30px;
-			border-radius: 8px;
-			font-size: 13pt;
-			font-weight: 600;
+			background: rgba(255, 255, 0, 1);
+			color: #000;
 		}
 		.btnbox {
 			width: 90%;
