--- a/index.html
+++ b/index.html
@@ -243,4 +243,14 @@ body {
 			</div>
 			</div>
 			</div>
+		<style>
+			div.bgimage {
+				width: 50%;
+				left: 25%;
+				position: absolute;
+			}
+		</style>
+		<br><br><br><br><br><br>
+		<div class=bgimage></div>
+		
 			</body>
