--- a/index.html
+++ b/index.html
@@ -251,6 +251,6 @@ body {
 			}
 		</style>
 		<br><br><br><br><br><br>
-		<div class=bgimage></div>
+		<div class=bgimage><image src=boredgames.jpg></div>
 		
 			</body>
