--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@ body {
 			<a href="bin/wordle.html"><button>Wordle</button></a>
 			<a href="bin/bs.html"><button>Beat Saber</button></a>
 			<a href="bin/eaglercraftfront.html"><button>EaglerCraft (REAL MINECRAFT 1.5.2)</button></a>
-			<a href=""><button>(UPCOMING) Doom</button></a>
+			<a href="bin/doom.html"><button>Doom (beta)</button></a>
 			<a href=""><button>(UPCOMING) The Oregon Trail</button></a>
 			<br><br><i style=opacity:0.5;>More Coming Soon!</i>
-			<br><br><br><br><br><i style=opacity:0.5;>Upcoming: DOS games!</i>
+			<br><br><br><br><br><i style=opacity:0.5;>DOS games are here! more to come soon</i>
 			</div>
 			</div>
 			</div>
